[package]
name = "figgie-tourney-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.6.0"
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
kanal = "0.1.0-pre8"
core_affinity = { version = "0.8.1" }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
minstant = "0.1.7"
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.4"
random_word = { version = "0.4.3", features = ["en"] }

[profile.release]
debug = true